Responsive layout is done

--- a/PE-HAQUAPP/app/src/main/res/values/strings.xml
+++ b/PE-HAQUAPP/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="completed">Teljesítve</string>
     <string name="save">Mentés</string>
     <string name="empty" />
+    <string name="settings">Beállítások</string>
+    <string name="createWork">Munka létrehozása</string>
+    <string name="filterByDate">Dátum szerinti szűrés</string>
     <string-array name="joblist">
         <item>Duguláselhárítás, csatornatisztítás</item>
         <item>Duguláselhárítás, csatornatisztítás, kamerázás</item>
